# Wavb_BE

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  Directory.md  PLAN.md  README.md  SKILLList.md  VOICEDOC_PROJECT.md  docker-compose.yml  requirement.txt
server/: .env.example  README.md  audio_stt_benchmark.csv  main.py  pyproject.toml  settings.py
server/db/: __init__.py  connection.py  schema.sql
server/dependencies/: auth.py
server/plan/: asyncpg-cancellation-conflict.md  chunk.md  codex rag.md  db,rag.md  embedding.md  graph.md  jwt.md  long audio.md  oauth.md  pdf.md  pdf_v2.md  rag-v2.md  rag.md  realtime-rebuild.md  realtime-summary.md  realtime-transcription.md  services-restructuring.md  work-items-drag-multiselect.md
server/repositories/: __init__.py  auth_repository.py  oauth_repository.py  rag_repository.py  work_item_repository.py
server/review/: 2026-06-04_23-19-16_rag_web_hybrid_review.md
server/routes/: audio.py  auth.py  files.py  oauth.py  rag.py  realtime.py  work_items.py
server/schemas/: __init__.py  auth.py  rag.py  realtime.py  work_items.py
server/scripts/: run_migrations.py
server/services/: audio_analysis_service.py  audio_chunking.py  auth_service.py  chunk_builder.py  chunk_metadata_service.py  embedding_service.py  morpheme_service.py  oauth_service.py  rag_query_service.py  realtime_transcription_service.py  search_chunk_builder.py  summary_pdf_service.py  summary_service.py  templated_summary_service.py  transcript_ingestion_service.py  transcription_service.py
server/summary/: REALTIME_BE_SUMMARY.md  (+2 more)
(+98 files in other folders)
